--- a/src/app/course-viewer/course-viewer.component.html
+++ b/src/app/course-viewer/course-viewer.component.html
@@ -1,4 +1,14 @@
 <div class="container-fluid">
-  <h2>{{course.title}}</h2>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">White Board</a>
+    <div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home">Home</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <h3>{{course.title}}</h3>
   <app-module-list></app-module-list>
 </div>
