--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,32 @@
 <div class="container-fluid">
-  <h2>Login</h2>
-  <label>
-    <b>Username:</b>
-  </label>
-  <input [(ngModel)]="username" class="form-control">
-  <label>
-    <b>Password:</b>
-  </label>
-  <input [(ngModel)]="password" type="password" class="form-control">
-  <br>
-  <button (click)="login(username, password)" class="btn btn-primary btn-block">Login</button>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand">Login</a>
+    <div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register">Register</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <label for="username">Username</label>
+  <input [(ngModel)]="username"
+         placeholder="username"
+         id="username"
+         class="form-control"/>
+  <label for="password">Password</label>
+  <input [(ngModel)]="password"
+         placeholder="password"
+         id="password"
+         type="password"
+         class="form-control"/>
+  <br/>
+  <button (click)="login(username, password)"
+          class="btn btn-primary btn-block">
+    Login
+  </button>
 </div>
