--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,63 @@
 <div class="container-fluid">
-  <h3>Welcome {{currentUser.username}}</h3>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand">Profile</a>
+  <div>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" *ngIf="username === 'admin';" routerLink="/user-admin">Admin Page</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+  <div >
+  <h2> Welcome {{firstName}} {{lastName}}</h2>
+  </div>
+  <label for="firstName">First Name</label>
+  <input [(ngModel)]="firstName"
+         id="firstName"
+         placeholder="First Name"
+         class="form-control"/>
+  <label for="lastName">Last Name</label>
+  <input [(ngModel)]="lastName"
+         id="lastName"
+         placeholder="Last Name"
+         class="form-control"/>
+  <label for="email">Email</label>
+  <input [(ngModel)]="email"
+         id="email"
+         placeholder="Email"
+         class="form-control"/>
+  <label for="phone">Phone Number</label>
+  <input [(ngModel)]="phone"
+         placeholder="Phone Number"
+         id="phone"
+         class="form-control"/>
+  <br/>
+  <button (click)="updateUser()"
+          class="btn btn-primary btn-block">
+    Update
+  </button>
+  <br/>
+  <div *ngIf="username !== 'admin';">
+  <h2>Sections:</h2>
+  </div>
+
+  <ul class="list-group">
+    <li *ngFor="let enrollment of sections" class="list-group-item">
+      {{enrollment.section.name}}
+      ({{enrollment.section.seats}})
+      <div class="float-right">
+      <button (click)="unEnroll(enrollment.section)"
+        class="btn btn-danger">
+        Unenroll
+      </button>
+      </div>
+    </li>
+  </ul>
+  <div class="padding">
+  <button class="btn btn-danger" (click)="logout()">Logout </button>
+  </div>
 </div>
