--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,36 @@
-<p>
-  register works!
-</p>
+<div class="container-fluid">
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand">Register</a>
+    <div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <label for="username">Enter Username</label>
+  <input [(ngModel)]="username"
+         placeholder="username"
+         id="username"
+         class="form-control"/>
+  <label for="password">Enter Password</label>
+  <input [(ngModel)]="password"
+         id="password"
+         placeholder="password"
+         class="form-control"/>
+  <label for="password2">Verify Password</label>
+  <input [(ngModel)]="password2"
+         id="password2"
+         placeholder="verify password"
+         class="form-control"/>
+  <br/>
+  <button (click)="register(username, password, password2)"
+          class="btn btn-primary btn-block">
+    Register
+  </button>
+</div>
