--- a/src/app/course-grid/course-grid.component.html
+++ b/src/app/course-grid/course-grid.component.html
@@ -1,6 +1,5 @@
 <div class="container-fluid">
-  <h1 class="alignment">WhiteBoard</h1>
-  <h2>Courses:</h2>
+  <h2 class="move-down">Courses:</h2>
   <div class="row">
   <div *ngFor="let course of courses" class="col-sm-3">
     <div class="card">
