--- a/src/app/course-navigator/course-navigator.component.html
+++ b/src/app/course-navigator/course-navigator.component.html
@@ -1,18 +1,18 @@
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">Course Navigator</a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/profile">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <h1 >Admin Page:</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="navbar-brand">Course Navigator</div>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/profile">Profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/home">Home</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="container-fluid move-down">
+  <h3>Admin Page</h3>
   <div class="row">
     <div class="col-6">
       <ul class="list-group">
