--- a/src/app/course-viewer/course-viewer.component.html
+++ b/src/app/course-viewer/course-viewer.component.html
@@ -1,14 +1,14 @@
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">White Board</a>
-    <div>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="navbar-brand">White Board</div>
+  <div>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/home">Home</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="container-fluid move-down">
   <h3>{{course.title}}</h3>
   <app-module-list></app-module-list>
 </div>
