--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,17 @@
 .alignment {
   text-align: center;
 }
+
+.cm-login-container {
+  height: 10em;
+  position: relative;
+  margin: 0;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%) }
+
+.cm-style-home-margin {
+  margin-right: 10px;
+}
