--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,32 +1,29 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="navbar-brand">Login</div>
+  <div class="navbar-text pull-right">
+    <a class="cm-style-home-margin"
+       routerLink="/home">Home</a>
+    <a routerLink="/register">Register</a>
+  </div>
+</nav>
 <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">Login</a>
-    <div>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/register">Register</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div class="cm-login-container col-8">
+    <label for="username">Username</label>
+    <input [(ngModel)]="username"
+           placeholder="username"
+           id="username"
+           class="form-control"/>
+    <label for="password">Password</label>
+    <input [(ngModel)]="password"
+           placeholder="password"
+           id="password"
+           type="password"
+           class="form-control"/>
+    <br/>
+    <button (click)="login(username, password)"
+            class="btn btn-primary btn-block">
+      Login
+    </button>
+  </div>
 
-  <label for="username">Username</label>
-  <input [(ngModel)]="username"
-         placeholder="username"
-         id="username"
-         class="form-control"/>
-  <label for="password">Password</label>
-  <input [(ngModel)]="password"
-         placeholder="password"
-         id="password"
-         type="password"
-         class="form-control"/>
-  <br/>
-  <button (click)="login(username, password)"
-          class="btn btn-primary btn-block">
-    Login
-  </button>
 </div>
