--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,5 @@
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Profile</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="navbar-brand">Profile</div>
   <div>
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -12,8 +11,9 @@
     </ul>
   </div>
 </nav>
-  <div >
-  <h2> Welcome {{firstName}} {{lastName}}</h2>
+<div class="container-fluid">
+  <div class="move-down">
+  <h3> Welcome {{firstName}} {{lastName}}</h3>
   </div>
   <label for="firstName">First Name</label>
   <input [(ngModel)]="firstName"
