--- a/src/app/white-board/white-board.component.html
+++ b/src/app/white-board/white-board.component.html
@@ -1,29 +1,29 @@
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">White Board</a>
-    <div>
-      <ul class="navbar-nav">
-        <div *ngIf="username === '';">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="navbar-brand">WhiteBoard</div>
+  <div>
+    <ul class="navbar-nav">
+      <div *ngIf="username === '';">
         <li class="nav-item">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
-        </div>
-        <div *ngIf="username === '';">
+      </div>
+      <div *ngIf="username === '';">
         <li class="nav-item">
           <a class="nav-link" routerLink="/register">Register</a>
         </li>
-        </div>
+      </div>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/profile">Profile</a>
+      </li>
+      <div *ngIf="username === 'admin';">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/profile">Profile</a>
+          <a class="nav-link" routerLink="/user-admin">Admin Page</a>
         </li>
-        <div *ngIf="username === 'admin';">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/user-admin">Admin Page</a>
-          </li>
-        </div>
-      </ul>
-    </div>
-  </nav>
+      </div>
+    </ul>
+  </div>
+</nav>
+<div class="container-fluid">
   <app-course-grid></app-course-grid>
   <br/>
   <div class="float-right"
