--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -16,11 +16,13 @@
     <label for="password">Enter Password</label>
     <input [(ngModel)]="password"
            id="password"
+           type="password"
            placeholder="password"
            class="form-control"/>
     <label for="password2">Verify Password</label>
     <input [(ngModel)]="password2"
            id="password2"
+           type="password"
            placeholder="verify password"
            class="form-control"/>
     <br/>
